--- a/src/components/common/card.css
+++ b/src/components/common/card.css
@@ -1,5 +1,5 @@
 .card-wrapper {
-    flex-basis: calc(100%/3);
+    flex-basis: calc(92%/3);
     border: 1px solid #e6e6e6;
     border-radius: 4px;
     border-top: 5px solid #9786ff;
@@ -7,6 +7,8 @@
     -moz-box-shadow: -1px 3px 13px 4px rgba(230, 230, 230, 1);
     box-shadow: -1px 3px 13px 4px rgba(230, 230, 230, 1);
     margin-right: 30px;
+    margin-bottom: 30px;
+
 }
 
 .card-wrapper .card-body {
