--- a/src/components/schedule_meeting/schduler.css
+++ b/src/components/schedule_meeting/schduler.css
@@ -28,7 +28,7 @@
   padding-bottom: 150px;
 }
 
-.created-event-types > div div {
+.created-event-types>div div {
   width: 45%;
   display: flex;
   justify-content: space-between;
@@ -37,7 +37,7 @@
   border-top: 1px solid #e6e6e6;
 }
 
-.created-event-types > div div span {
+.created-event-types>div div span {
   font-size: 40px;
   font-weight: bold;
   margin-right: 10px;
@@ -66,13 +66,14 @@
   justify-content: initial;
 }
 
-.scheduler-wrapper.add-meet-wrapper > div {
+.scheduler-wrapper.add-meet-wrapper>div {
   flex-basis: calc(93% / 3);
   height: 80vh;
   border-right: 1px solid #e6e6e6;
   padding: 20px 20px 30px 30px;
 }
-.scheduler-wrapper.event-details > div {
+
+.scheduler-wrapper.event-details>div {
   flex-basis: calc(95% / 2);
 }
 
@@ -106,15 +107,7 @@
   margin: 0 auto;
 }
 
-.timeslot-wrapper p {
-  padding: 20px 15px;
-  border: 1px solid rgb(0, 162, 253);
-  border-radius: 5px;
-  color: rgb(0, 162, 253);
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
+
 
 .time-box {
   height: 75vh;
@@ -134,6 +127,18 @@
   font-weight: 700;
 }
 
+.scheduler-wrapper.add-meet-wrapper .timeslot-wrapper p {
+  padding: 20px 15px;
+  border: 1px solid rgb(0, 162, 253);
+  border-radius: 5px;
+  color: rgb(0, 162, 253);
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
 .meeting-form h2 {
   text-align: left;
 }
@@ -148,16 +153,20 @@
   font-weight: 500;
   margin-bottom: 10px;
 }
+
 .meeting-form input {
   margin-bottom: 15px;
 }
+
 .full-name {
   display: flex;
 }
+
 .full-name div {
   margin-right: 50px;
   flex-basis: calc(95% / 2);
 }
+
 .meeting-form input[type="email"] {
   width: 92%;
 }
@@ -165,4 +174,33 @@
 .meeting-form button {
   font-size: 18px;
   border-radius: 8px;
+}
+
+.event-list .event-date {
+  background: #f6f6f6;
+  padding: 25px 20px;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.event-list .scheduled-meet {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.event-list .scheduled-meet h4 {
+  margin: 5px 0;
+}
+
+.event-list .scheduled-meet>div {
+  flex-basis: calc(100%/3);
+}
+
+.scheduled-event .headers {
+  padding: 10px 20px;
+  font-weight: 500;
 }
